# rust-sqlite

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/src/: fetch.rs  input.rs  main.rs
src/: db.rs  ingest.rs  main.rs  models.rs
