[package]
name = "rust-sqlite"
version = "0.1.0"
authors = ["CCBaxter84 <troyceclark@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
rocket_contrib = { version = "0.4.7", features = ["json"] }
rusqlite = { version = "0.25.0", features = ["bundled"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.64"
csv = "1.1"